# cbittorrent

./: .gitignore  CMakeLists.txt  README.md  bitfield.c  bitfield.h  bterror.h  data.c  data.h  main.c  message.c  message.h  peer.c  peer.h  signal_handler.c  signal_handler.h  torrentfile.c  torrentfile.h  tracker.c  tracker.h
data/: The.Substance.(2024)-alE13_BDRemux.torrent
